--- a/product/src/main/resources/application.properties
+++ b/product/src/main/resources/application.properties
@@ -4,3 +4,10 @@ server.port=8083
 # defaults for this docker image - vromero/activemq-artemis
 spring.artemis.user=artemis
 spring.artemis.password=simetraehcapa
+
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
