--- a/credit/src/main/resources/application.properties
+++ b/credit/src/main/resources/application.properties
@@ -4,9 +4,13 @@ server.port=8081
 spring.artemis.user=artemis
 spring.artemis.password=simetraehcapa
 
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
+
+spring.jpa.show-sql=true
+spring.datasource.url=jdbc:mysql://localhost:3306/credit
+spring.datasource.username=root
+spring.datasource.password=pass
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.generate_statistics=true
+
+
