--- a/product/src/main/resources/application.properties
+++ b/product/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.artemis.user=artemis
 spring.artemis.password=simetraehcapa
 
 spring.jpa.show-sql=true
-spring.datasource.url=jdbc:mysql://localhost:3306/product
+spring.datasource.url=jdbc:mysql://host.docker.internal:3306/product
 spring.datasource.username=root
 spring.datasource.password=pass
 spring.jpa.hibernate.ddl-auto=create-drop
