--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,17 +2,17 @@ version: '3.7'
 
 services:
   credit:
-    image: library/credit:0.0.1-SNAPSHOT
+    image: credit:0.0.1-SNAPSHOT
     mem_limit: 700m
     ports:
     - "8081:8081"
   customer:
-    image: library/customer:0.0.1-SNAPSHOT
+    image: customer:0.0.1-SNAPSHOT
     mem_limit: 700m
     ports:
       - "8082:8082"
   product:
-    image: library/product:0.0.1-SNAPSHOT
+    image: product:0.0.1-SNAPSHOT
     mem_limit: 700m
     ports:
       - "8083:8083"
