--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,12 +1,23 @@
 version: '3.7'
 
 services:
+  mysqldb:
+    image: mysql
+    container_name: mysqldb
+    volumes:
+      - "./scripts/data.sql:/docker-entrypoint-initdb.d/2.sql"
+    ports:
+      - '3306:3306'
+    environment:
+      MYSQL_ROOT_PASSWORD: 'pass'
   jms:
     image: vromero/activemq-artemis
     container_name: jms
     ports:
       - "8161:8161"
       - "61616:61616"
+    depends_on:
+      - mysqldb
   credit:
     image: credit:0.0.1-SNAPSHOT
     container_name: credit
@@ -15,8 +26,11 @@ services:
       - "8081:8081"
     depends_on:
       - jms
+      - mysqldb
+    restart: on-failure
     environment:
       SPRING_ARTEMIS_HOST: jms
+      SPRING_DATASOURCE_URL: jdbc:mysql://host.docker.internal:3306/credit
   customer:
     image: customer:0.0.1-SNAPSHOT
     container_name: customer
@@ -25,8 +39,11 @@ services:
       - "8082:8082"
     depends_on:
       - jms
+      - mysqldb
+    restart: on-failure
     environment:
       SPRING_ARTEMIS_HOST: jms
+      SPRING_DATASOURCE_URL: jdbc:mysql://host.docker.internal:3306/customer
   product:
     image: product:0.0.1-SNAPSHOT
     container_name: product
@@ -35,5 +52,8 @@ services:
       - "8083:8083"
     depends_on:
       - jms
+      - mysqldb
+    restart: on-failure
     environment:
       SPRING_ARTEMIS_HOST: jms
+      SPRING_DATASOURCE_URL: jdbc:mysql://host.docker.internal:3306/product
